<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetails"
            type="com.sulaz.tmdb.data.movieDetails.MovieDetails" />

        <variable
            name="viewmodel"
            type="com.sulaz.tmdb.viewModel.DetailsFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/fragment_details_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_details_iv_backdrop"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:backdropPath="@{movieDetails.backdropPath}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="H, 16:10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:src="@mipmap/backdrop_w780" />

        <TextView
            android:id="@+id/fragment_details_tv_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{movieDetails.overview}"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_iv_backdrop"
            tools:text="@string/movie_summary" />

        <TextView
            android:id="@+id/fragment_details_tv_genre_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_detail_genre_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_summary" />

        <TextView
            android:id="@+id/fragment_details_tv_genre_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@{movieDetails.genres.get(0).toString()}"
            app:layout_constraintStart_toEndOf="@id/fragment_details_tv_genre_key"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_summary"
            tools:text="Comedy, Thriller, Drama" />

        <TextView
            android:id="@+id/fragment_details_tv_lang_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_detail_lang_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_genre_key" />

        <TextView
            android:id="@+id/fragment_details_tv_lang_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{movieDetails.originalLanguage}"
            app:layout_constraintStart_toEndOf="@id/fragment_details_tv_lang_key"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_genre_value"
            tools:text="ko" />

        <TextView
            android:id="@+id/fragment_details_tv_duration_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_detail_duration_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_lang_key" />

        <TextView
            android:id="@+id/fragment_details_tv_duration_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@{String.valueOf(movieDetails.runtime)}"
            app:layout_constraintStart_toEndOf="@id/fragment_details_tv_lang_key"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_lang_value"
            tools:text="132" />

        <TextView
            android:id="@+id/fragment_details_tv_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_detail_minutes_title"
            app:layout_constraintStart_toEndOf="@id/fragment_details_tv_duration_value"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_lang_value" />

        <Button
            android:id="@+id/fragment_details_btn_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fragment_detail_book_btn_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_details_tv_duration_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>